Undo top-bar spacing change from issue #188 as it looks weird in the (#242)
devtools themselves, fix #227

--- a/public/js/components/SourceTabs.css
+++ b/public/js/components/SourceTabs.css
@@ -1,5 +1,5 @@
 .source-tabs {
-  height: 40px;
+  height: 30px;
   width: 100%;
   border-bottom: 1px solid var(--theme-gray);
 }
